Added edit modal and formatted profile view

--- a/anovalabs_client/src/components/Profile.css
+++ b/anovalabs_client/src/components/Profile.css
@@ -16,12 +16,18 @@
   background-color: rgba(247, 247, 247, 0.86);
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: center;
+  vertical-align: middle;
   align-items: center;
   box-shadow: 6px -6px 10px #D2EDFC, -6px 6px 10px #D2EDFC;
   border-radius: 16px;
 
 }
+
+.profileBox p{
+     padding-right: 20px;
+}
+
 .linktext{
   text-decoration: underline;
   padding-bottom: 5px;
@@ -88,8 +94,8 @@ input[type=checkbox], select{
 }
 input[type=text], select {
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
+  padding: 20px 10px;
+  margin-top: 0px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -97,10 +103,28 @@ input[type=text], select {
   border-color: #D2EDFC;
 }
 
+input {
+     width: 100%;
+     padding: 20px 10px;
+     display: inline-block;
+     border: 1px solid #ccc;
+     border-radius: 4px;
+     box-sizing: border-box;
+     border-color: #D2EDFC;
+}
+input[type=email], select {
+     width: 100%;
+     padding: 20px 10px;
+     display: inline-block;
+     border: 1px solid #ccc;
+     border-radius: 4px;
+     box-sizing: border-box;
+     border-color: #D2EDFC;
+   }
+
 input[type=password], select {
   width: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -113,7 +137,6 @@ input[type=submit] {
   background-color: #9ED8DF;
   color: white;
   padding: 10px 20px;
-  margin: 8px 0;
   border: none;
   border-radius: 4px;
   font-size: 14px;
@@ -126,10 +149,15 @@ input[type=submit]:hover {
   opacity: .8;
 }
 
-.editButton {
-}
 
-button {
+.editModal {
+     padding: 10px 10px;
+}
+/* button {
      border-style: solid;
      border-radius: 10px 10px; 
+} */
+
+.editFields .ant-row {
+     padding: 20 0px;
 }
