--- a/anovalabs_client/src/components/LessonComponent.css
+++ b/anovalabs_client/src/components/LessonComponent.css
@@ -43,15 +43,17 @@
   position: relative;
 
 }
-input[type=submit] {
+.viewAssignment{
+  text-align: center;
+}
+.viewAssignment a {
   width: 40%;
-  height: 40px;
+  height: 20px;
   color: white;
   padding: 10px 10px;
   margin: 8px 0;
   border: none;
-  font-size: 11px;
-
+  font-family: Lato;
   cursor: pointer;
   background: #03A9F4;
   box-shadow: 0px 2px 2px rgba(3, 169, 244, 0.2);
@@ -60,6 +62,8 @@ input[type=submit] {
   position: absolute;
   bottom: 20px;
   right: 10px;
+  font-size: 14px;
+  text-decoration: none;
 
 
 
@@ -69,6 +73,6 @@ input[type=submit] {
 
 
 
-input[type=submit]:hover {
+.viewAssignment a:hover {
   opacity: .8;
 }
