--- a/anovalabs_client/src/components/LessonPool.css
+++ b/anovalabs_client/src/components/LessonPool.css
@@ -37,13 +37,14 @@ body{
 }
 
 .plusCard{
-  width: 300px;
-  height: 200px;
+  width: 340px;
+  height: 240px;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 20% 15% 35% 40%;
   /*align-items: center;*/
   border-radius: 16px;
+  border: none;
   background: #FFFFFF;
   box-shadow: 0px -4px 0px #D2EDFC;
   border-radius: 5px;
