--- a/anovalabs_client/src/stylesheets/LessonPool.css
+++ b/anovalabs_client/src/stylesheets/LessonPool.css
@@ -18,6 +18,14 @@ body{
   min-height: 1000px;
 }
 
+.addModal {
+  padding: 10px 10px;
+}
+
+.addFields .ant-row {
+  padding: 20 0px;
+}
+
 .lessonPoolContainer:after {
   content: "";
   display: block;
