--- a/anovalabs_client/src/stylesheets/SignUp.css
+++ b/anovalabs_client/src/stylesheets/SignUp.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 .container {
   background-color: #E6F4FC;
@@ -5,12 +6,11 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .signUpBox {
-  width: 350px;
-  height: 480px;
+  padding: 20px 40px;
   background-color: rgba(247, 247, 247, 0.86);
   display: flex;
   flex-direction: column;
@@ -18,6 +18,8 @@
   align-items: center;
   box-shadow: 6px -6px 10px #D2EDFC, -6px 6px 10px #D2EDFC;
   border-radius: 16px;
+  font-family: 'Lato';
+  font-size:15px;
 }
 
 .anova{
@@ -27,9 +29,15 @@
   padding-left: 4px;
 }
 
-.logo{
-  width: 10%;
+.title{
+  display:flex;
+  flex-direction:row;
+}
+
+.signup-logo{
+  max-width:10%;
+  width: auto;
   height: auto;
   padding-bottom: 5px;
-  padding-bottom: 8px;
+  margin:0;
 }
