--- a/anovalabs_client/src/stylesheets/LessonPool.css
+++ b/anovalabs_client/src/stylesheets/LessonPool.css
@@ -20,10 +20,10 @@ body{
 
 .lessons_title {
   padding: 20px 20px;
-  position: absolute;
+  position: relative;
   height: 100px;
   display: block;
-  margin-top:-390px
+  /*margin-top:-390px*/
 }
 
 .addModal {
