--- a/anovalabs_client/src/stylesheets/Lessons.css
+++ b/anovalabs_client/src/stylesheets/Lessons.css
@@ -32,10 +32,11 @@
 
 .lessons_title {
   padding: 20px 20px;
-  position: absolute;
+  position: relative;
   height: 100px;
   display: block;
-  margin-top:-390px
+  width: 100%;
+  text-align: center;
 }
 
 .ant-avatar.ant-avatar-icon {
@@ -49,13 +50,21 @@
 }
 
 .container{
-  background: #F5F7F8;
+  /* background: #F5F7F8;
   overflow:auto;
 
   padding-top: 100px;
   padding-bottom: 100px;
 
-  height:100%;
+  height:100%; */
+
+  background-color: #E6F4FC;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .emptyDiv{
