reg form API frontend, more users, ProfileCard

--- a/anovalabs_client/src/stylesheets/SignUp.css
+++ b/anovalabs_client/src/stylesheets/SignUp.css
@@ -6,7 +6,7 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-center;
 }
 
 .signUpBox {
