--- a/anovalabs_client/src/stylesheets/Roster.css
+++ b/anovalabs_client/src/stylesheets/Roster.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   padding-top:100px;
+
 }
 .containerGrid {
      background-color: #E6F4FC;
@@ -16,8 +17,8 @@
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      grid-gap: 10px;
-     grid-row-gap: 250px;
-     grid-auto-rows: minmax(100px, auto);   
+     grid-row-gap: 200px;
+     grid-auto-rows: 200px;
      justify-content: center;
      align-items: center;
    }
