--- a/anovalabs_client/src/stylesheets/SignUp.css
+++ b/anovalabs_client/src/stylesheets/SignUp.css
@@ -11,11 +11,11 @@
 
 .signUpBox {
     width: 350px;
-    height: 550px;
+    height: 670px;
     background-color: rgba(247, 247, 247, 0.86);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding-top: 4%;
     align-items: center;
     box-shadow: 6px -6px 10px #D2EDFC, -6px 6px 10px #D2EDFC;
     border-radius: 16px;
@@ -39,4 +39,9 @@
   height: auto;
   padding-bottom: 5px;
   margin:0;
+}
+
+.login-form {
+  width: 270px;
+  padding-top: 5px;
 }
