--- a/anovalabs_client/src/stylesheets/Roster.css
+++ b/anovalabs_client/src/stylesheets/Roster.css
@@ -2,13 +2,13 @@
 
 .container {
   background-color: #E6F4FC;
+  margin:0;
+  padding:0;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top:100px;
-
 }
 .containerGrid {
      background-color: #E6F4FC;
@@ -17,8 +17,8 @@
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      grid-gap: 10px;
-     grid-row-gap: 200px;
-     grid-auto-rows: 200px;
+     grid-row-gap: auto;
+     grid-auto-rows: auto;
      justify-content: center;
      align-items: center;
    }
@@ -191,7 +191,7 @@ input[type=submit]:hover {
 }
 /* button {
      border-style: solid;
-     border-radius: 10px 10px; 
+     border-radius: 10px 10px;
 } */
 
 .editFields .ant-row {
