--- a/anovalabs_client/src/stylesheets/Login.css
+++ b/anovalabs_client/src/stylesheets/Login.css
@@ -7,12 +7,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 70px;
 }
 
 .loginBox {
 
   width: 350px;
-  height: 400px;
+  height: 425px;
   background-color: rgba(247, 247, 247, 0.86);
   display: flex;
   flex-direction: column;
