--- a/anovalabs_client/src/stylesheets/LessonPool.css
+++ b/anovalabs_client/src/stylesheets/LessonPool.css
@@ -1,23 +1,14 @@
-.lessonPoolContainer{
+.lessonPoolContainer {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-auto-rows: auto;
 
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-auto-rows: auto;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
+  height: 80%;
 
-    grid-column-gap: 50px;
-    grid-row-gap: 50px;
-    height: 80%;
-
-    padding-bottom: 200px;
-
-
+  padding-bottom: 200px;
 }
-
-/*
-body{
-  min-width: 1100px;
-  min-height: 1000px;
-}*/
 
 .addModal {
   padding: 10px 10px;
@@ -31,41 +22,41 @@ body{
 }
 
 .lessonPoolContainer:after {
-  content: "";
+  content: '';
   display: block;
 
   height: 100px;
 }
 
-.container{
-  background: #F5F7F8;
-  overflow:auto;
-
+.fxLessonPoolContainer {
   padding-top: 100px;
-  padding-bottom: 100px;
-
-  height:100%;
+  background-color: #e6f4fc;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.plusCard{
+.plusCard {
   width: 300px;
   height: 200px;
   display: grid;
   /*align-items: center;*/
   border-radius: 16px;
   border: none;
-  background: #FFFFFF;
-  box-shadow: 0px -4px 0px #D2EDFC;
+  background: #ffffff;
+  box-shadow: 0px -4px 0px #d2edfc;
   border-radius: 5px;
   padding: 20px 20px;
   position: relative;
   padding-bottom: 20px;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
-
 }
-.emptyDiv{
+.emptyDiv {
   height: 100px;
-  background: #F5F7F8;
+  background: #f5f7f8;
 }
