--- a/anovalabs_client/src/stylesheets/Login.css
+++ b/anovalabs_client/src/stylesheets/Login.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
-.container {
-  background-color: #E6F4FC;
+.loginContainer {
+  background-color: #e6f4fc;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 70px;
+  padding-top: 150px;
+  padding-bottom: 230px;
 }
 
 .loginBox {
-
   width: 350px;
   height: 425px;
   background-color: rgba(247, 247, 247, 0.86);
@@ -19,16 +19,15 @@
   flex-direction: column;
   padding-top: 4%;
   align-items: center;
-  box-shadow: 6px -6px 10px #D2EDFC, -6px 6px 10px #D2EDFC;
+  box-shadow: 6px -6px 10px #d2edfc, -6px 6px 10px #d2edfc;
   border-radius: 16px;
-
 }
-.linktext{
+.linktext {
   text-decoration: underline;
   padding-bottom: 5px;
   color: black;
 }
-.links{
+.links {
   font-family: 'Lato';
   font-size: 12px;
   display: flex;
@@ -40,22 +39,22 @@
   padding-bottom: 8px;
 }
 
-.error{
+.error {
   font-family: 'Lato';
   font-size: 12px;
   color: red;
   padding-bottom: 5px;
 }
 
-.anova{
-  color: #155FC2;
+.anova {
+  color: #155fc2;
   font-size: 20px;
 }
-.labs{
+.labs {
   padding-left: 4px;
   font-size: 20px;
 }
-.title{
+.title {
   font-family: 'Lato';
   font-size: 20px;
   display: flex;
@@ -63,27 +62,27 @@
   padding-bottom: 10px;
 }
 
-label{
+label {
   font-family: 'Lato';
   font-size: 11px;
 }
 
-.logo{
+.logo {
   width: 10%;
   height: 15%;
   padding-bottom: 5px;
   padding-bottom: 8px;
 }
 
-.log_logo{
-  max-width:10%;
+.log_logo {
+  max-width: 10%;
   width: auto;
   height: auto;
   padding-bottom: 10px;
-  margin:0;
+  margin: 0;
 }
 
-.remember{
+.remember {
   font-family: 'Lato';
   font-size: 10px;
 }
@@ -99,10 +98,12 @@ label{
   width: 100%;
 }
 
-input[type=checkbox], select{
-  border-color: #D2EDFC;
+input[type='checkbox'],
+select {
+  border-color: #d2edfc;
 }
-input[type=text], select {
+input[type='text'],
+select {
   width: 100%;
   height: 10px;
   padding: 12px 20px;
@@ -111,10 +112,11 @@ input[type=text], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  border-color: #D2EDFC;
+  border-color: #d2edfc;
 }
 
-input[type=password], select {
+input[type='password'],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -122,12 +124,12 @@ input[type=password], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  border-color: #D2EDFC;
+  border-color: #d2edfc;
 }
 
-input[type=button] {
+input[type='button'] {
   width: 100%;
-  background-color: #9ED8DF;
+  background-color: #9ed8df;
   color: white;
   padding: 10px 20px;
   margin: 8px 0;
@@ -139,6 +141,7 @@ input[type=button] {
   box-shadow: 0px 4px 4px rgba(31, 137, 139, 0.5);
 }
 
-input[type=button], select {
-  opacity: .8;
+input[type='button'],
+select {
+  opacity: 0.8;
 }
