--- a/anovalabs_client/src/stylesheets/navbar.css
+++ b/anovalabs_client/src/stylesheets/navbar.css
@@ -1,5 +1,5 @@
 .navbar_menu {
-  background: #F7F7F7;
+  background: #f7f7f7;
   position: fixed;
   width: 100%;
   z-index: 1;
@@ -22,15 +22,15 @@
 #navbar-dialog {
   height: 120px;
   width: 200px;
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
   z-index: 5;
-  right:0;
+  right: 0;
   transform: translate(-32px, 58px);
   border-radius: 4px;
   position: fixed;
   background-color: white;
   padding: 16px;
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
   display: none;
 }
 
