--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -3,7 +3,7 @@
 .container {
   background-color: #e6f4fc;
   margin: 0;
-  padding: 100px;
+  padding: 100px 10px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -16,11 +16,17 @@
   height: 80%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  grid-gap: 20px;
   grid-row-gap: auto;
   grid-auto-rows: auto;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 767px) {
+  .containerGrid{
+    grid-template-columns: 100%;
+  }
 }
 
 .profileDescription {
