--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -23,6 +23,12 @@
   align-items: center;
 }
 
+@media (max-width: 1024px) {
+  .containerGrid{
+    grid-template-columns: 50% 50%;
+  }
+}
+
 @media (max-width: 767px) {
   .containerGrid{
     grid-template-columns: 100%;
@@ -35,22 +41,9 @@
 .profileDescription p {
   font-size: 12px;
 }
-.profileBox {
-  width: 700px;
-  height: 450px;
-  background-color: rgba(247, 247, 247, 0.86);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  vertical-align: middle;
-  align-items: center;
-  box-shadow: 6px -6px 10px #d2edfc, -6px 6px 10px #d2edfc;
-  border-radius: 16px;
-}
 
-.profileBox p {
-  padding-right: 20px;
-}
+
+
 
 .linktext {
   text-decoration: underline;
