--- a/client/src/stylesheets/LessonCard.css
+++ b/client/src/stylesheets/LessonCard.css
@@ -26,8 +26,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-
 }
 
 .titleContainer{
@@ -39,7 +37,6 @@
   font-family: Lato;
   font-size: 18px;
   color: #155FC2;
-
 }
 .date{
   font-family: Lato;
@@ -59,40 +56,23 @@
 }
 
 .buttonContainer{
-  width: 100%;
-  position: relative;
+  display: flex;
+  justify-content: space-around;
+}
 
-}
-.viewAssignment{
-  text-align: center;
-}
-.viewAssignment a {
-  width: 150px;
+.lowerButton {
+  cursor: pointer;
   height: 40px;
   color: white;
-  padding: 10px 10px;
-  margin: 8px 0;
+  padding: 10px;
   border: none;
-  font-family: Lato;
-  cursor: pointer;
-  background: #03A9F4;
-  box-shadow: 0px 2px 2px rgba(3, 169, 244, 0.2);
-  border-radius: 3px;
-
-  position: absolute;
-  bottom: 20px;
-  right: 10px;
+  font-family: Lato, serif;
   font-size: 13px;
   text-decoration: none;
-
-
-
-
+  background: #03A9F4;
+  box-shadow: 0 2px 2px rgba(3, 169, 244, 0.2);
+  border-radius: 3px;
 }
-
-
-
-
-.viewAssignment a:hover {
+.lowerButton:hover {
   opacity: .8;
 }
