--- a/client/src/stylesheets/SignUp.css
+++ b/client/src/stylesheets/SignUp.css
@@ -13,7 +13,7 @@
 
 .signUpBox {
   width: 350px;
-  height: 670px;
+  height: 520px;
   background-color: rgba(247, 247, 247, 0.86);
   display: flex;
   flex-direction: column;
@@ -46,4 +46,13 @@
 .login-form {
   width: 270px;
   padding-top: 5px;
+}
+
+.signup-field-container {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-google {
+  line-height: 0;
 }
