--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -6,9 +6,9 @@
   padding: 100px 10px;
   width: 100%;
   height: 100%;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 .containerGrid {
   background-color: #e6f4fc;
@@ -21,6 +21,13 @@
   grid-auto-rows: auto;
   justify-content: center;
   align-items: center;
+}
+
+.innerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 30px;
 }
 
 @media (max-width: 1024px) {
