--- a/client/src/stylesheets/FeedbackPage.css
+++ b/client/src/stylesheets/FeedbackPage.css
@@ -5,15 +5,60 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  /* justify-content: space-evenly; */
+}
+
+h3 {
+  color: #0489c5;
 }
 
 .feedbackBoxContainer {
   width: 85%;
   border-radius: 25px;
-  /* border-style: solid; */
+  border-style: solid;
+  border-width: thin;
+  background-color: white;
+  padding: 30px;
   position: relative;
   left: 100px;
   top: 100px;
+  /* margin: 25px 25px 25px 25px; */
+}
+
+.ratingContainer {
+  width: 30%;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: thin;
+  background-color: white;
+  padding: 30px;
+  position: relative;
+  left: 100px;
+  top: 100px;
+  justify-content: space-between;
+  margin-top: 25px;
+}
+
+.rateText {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.rate,
+.rate-selected {
+  background-color: #e7e7e7;
+  border: none;
+  margin-right: 10px;
+}
+
+.rate-selected {
+  background-color: #03a9f4;
 }
 
 .submitButton {
@@ -22,15 +67,7 @@
   position: relative;
   left: 100px;
   top: 100px;
-}
-
-.ratingContainer {
-  width: 85%;
-  border-radius: 25px;
-  /* border-style: solid; */
-  position: relative;
-  left: 100px;
-  top: 100px;
+  margin-top: 25px;
 }
 /* 
 .lessonPageContainer {
