--- a/client/src/stylesheets/FeedbackPage.css
+++ b/client/src/stylesheets/FeedbackPage.css
@@ -26,6 +26,10 @@ h3 {
   /* margin: 25px 25px 25px 25px; */
 }
 
+::placeholder {
+  color: lightgray;
+}
+
 .ratingContainer {
   width: 30%;
   border-radius: 25px;
