--- a/client/src/stylesheets/LessonCard.css
+++ b/client/src/stylesheets/LessonCard.css
@@ -1,61 +1,78 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
-.card{
+.card {
   width: 300px;
   height: 200px;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows:   20% 15% 35% 40%;
+  grid-template-rows: 20% 15% 35% 40%;
   /*align-items: center;*/
-  border-radius: 16px;
-  background: #FFFFFF;
-  box-shadow: 0px -4px 0px #D2EDFC;
+  background: #ffffff;
+  box-shadow: 0px -4px 0px #d2edfc;
   border-radius: 5px;
   padding: 20px 20px;
   position: relative;
   padding-bottom: 20px;
 }
 
-.deleteButton{
+.cardPool {
+  width: 300px;
+  height: 200px;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 25% 40% 45%;
+  /*align-items: center;*/
+  background: #ffffff;
+  box-shadow: 0px -4px 0px #d2edfc;
+  border-radius: 5px;
+  padding: 20px 20px;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.deleteButton {
   width: 30px;
   height: 30px;
   border: none;
   position: absolute;
-  right:10px;
-  top:0px;
+  right: 10px;
+  top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.titleContainer{
+.deleteButton:hover {
+  cursor: pointer;
+}
+
+.titleContainer {
   position: relative;
 }
 
-
-.lessonTitle{
+.lessonTitle {
   font-family: Lato;
   font-size: 18px;
-  color: #155FC2;
+  color: #155fc2;
 }
-.date{
+.date {
   font-family: Lato;
   font-size: 14px;
   padding-bottom: 10px;
 }
 
-.description{
+.description {
   font-family: Lato;
   font-size: 11px;
   padding-bottom: 8px;
 }
-.descriptionContainer{
+.descriptionContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.buttonContainer{
+.buttonContainer {
   display: flex;
   justify-content: space-around;
 }
@@ -64,15 +81,15 @@
   cursor: pointer;
   height: 40px;
   color: white;
-  padding: 10px;
+  padding: 10px 25px;
   border: none;
   font-family: Lato, serif;
   font-size: 13px;
   text-decoration: none;
-  background: #03A9F4;
+  background: #03a9f4;
   box-shadow: 0 2px 2px rgba(3, 169, 244, 0.2);
   border-radius: 3px;
 }
 .lowerButton:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
