--- a/client/src/stylesheets/Login.css
+++ b/client/src/stylesheets/Login.css
@@ -3,7 +3,7 @@
 .loginContainer {
   background-color: #e6f4fc;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,7 +54,7 @@
   padding-left: 4px;
   font-size: 20px;
 }
-.title {
+.login-title {
   font-family: 'Lato';
   font-size: 20px;
   display: flex;
