--- a/client/src/stylesheets/LessonPool.css
+++ b/client/src/stylesheets/LessonPool.css
@@ -39,8 +39,9 @@
 .fxLessonPoolContainer {
   padding-top: 100px;
   background-color: #e6f4fc;
-  width: 100%;
+  width: 100vw;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
