--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -4,8 +4,9 @@
   background-color: #e6f4fc;
   margin: 0;
   padding: 100px 10px;
-  width: 100%;
+  width: 100vw;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
