--- a/client/src/stylesheets/SiteLessons.css
+++ b/client/src/stylesheets/SiteLessons.css
@@ -11,7 +11,7 @@
 }
 
 @media (max-width: 767px) {
-  .lessonsContainer{
+  .lessonsContainer {
     grid-template-columns: 100%;
   }
 }
@@ -53,8 +53,9 @@
 
 .siteLessonsContainer {
   background-color: #e6f4fc;
-  width: 100%;
+  width: 100vw;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
