--- a/client/src/stylesheets/Profile.css
+++ b/client/src/stylesheets/Profile.css
@@ -4,6 +4,7 @@
   background-color: #e6f4fc;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -179,5 +180,5 @@ input[type='submit']:hover {
 } */
 
 .editFields .ant-row {
-  padding: 20 0px;
+  margin-bottom: 12px;
 }
