--- a/client/src/stylesheets/SignUp.css
+++ b/client/src/stylesheets/SignUp.css
@@ -4,9 +4,10 @@
   background-color: #e6f4fc;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: flex-center;
+  align-items: center;
   padding-top: 70px;
   padding-bottom: 80px;
 }
@@ -30,9 +31,10 @@
   padding-left: 4px;
 }
 
-.title {
+.signup-title {
   display: flex;
   flex-direction: row;
+  margin-bottom: 12px;
 }
 
 .signup-logo {
