--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -78,7 +78,7 @@ img {
   align-content: center;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 40px;
+  padding-top: 15px;
 }
 
 .ant-card-body p {
@@ -203,4 +203,32 @@ input[type='submit']:hover {
 
 .editFields .ant-row {
   padding: 20 0px;
+}
+
+/* might want to move below to its own rosterCard.css file */
+
+.rosterCardItem {
+  border-radius: 15px;
+  padding: 5px;
+  font-size: 12px;
+}
+
+#email {
+  background-color: #EAC5C5;
+}
+
+#candy {
+  background-color: #EADBC5;
+}
+
+#hobby {
+  background-color: #B9D8B2;
+}
+
+#fact {
+  background-color: #C1D4E5;
+}
+
+#notes {
+  background-color: #DEDEDE;
 }
