--- a/client/src/stylesheets/LessonPage.css
+++ b/client/src/stylesheets/LessonPage.css
@@ -3,14 +3,12 @@
 .page {
   background-color: #e9f4fb;
   height: 100%;
-  padding-bottom: 200px;
+  min-height: 100vh;
+  padding: 100px 120px 150px 120px;
 }
 
 .lessonPageContainer {
-  width: 85%;
   position: relative;
-  left: 100px;
-  top: 100px;
 }
 
 .title-container {
@@ -51,8 +49,7 @@ h1,
 
 .textBox {
   min-height: 45px;
-  width: 90%;
-  padding: 10px;
+  width: 100%;
   margin-bottom: 20px;
   font-size: 16px;
   border-radius: 5px;
@@ -60,23 +57,73 @@ h1,
 
 .editing {
   background-color: #ffffff;
+  padding: 10px;
   box-shadow: 0px -4px 0px #d2edfc;
 }
 
-.saveButton {
-  font-family: Lato, sans-serif;
-  background-color: #2e64bc;
-  color: #ffffff;
+.buttonsContainer {
   margin-top: 30px;
   position: relative;
-  left: 85%;
+  float: right;
   font-size: 18px;
+  font-family: Lato, sans-serif;
+}
+
+.saveButton {
+  background-color: #2e64bc;
+  color: #ffffff;
   border: none;
   padding: 8px 22px;
   border-radius: 5px;
 }
 
-.saveButton:hover {
+.cancelButton {
+  background-color: #ededed;
+  border: none;
+  padding: 8px 22px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+
+.saveButton:hover,
+.cancelButton:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+
+.editorButton {
+  background: none;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  color: grey;
+}
+
+.editorButton:hover {
+  background: #e9f4fb;
+}
+
+.DraftEditor-root {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.line {
+  border-top: 1px solid #ededed;
+  margin-top: 10px;
+}
+
+@media (max-width: 767px) {
+  .page {
+    padding: 100px 100px 150px 100px;
+  }
+}
+
+@media (max-width: 600px) {
+  .page {
+    padding: 100px 50px 100px 50px;
+  }
 }
