--- a/client/src/stylesheets/FeedbackPage.css
+++ b/client/src/stylesheets/FeedbackPage.css
@@ -19,7 +19,8 @@ h3 {
   background-color: white;
   padding: 30px;
   position: relative;
-  left: 100px;
+  margin-bottom: 3vh;
+  /*left: 100px; */
   top: 100px;
   /* margin: 25px 25px 25px 25px; */
 }
@@ -34,7 +35,7 @@ h3 {
   background-color: white;
   padding: 30px;
   position: relative;
-  left: 100px;
+  /*left: 100px; */
   top: 100px;
   justify-content: space-between;
   margin-top: 25px;
@@ -65,7 +66,7 @@ h3 {
   width: 10%;
   height: 5%;
   position: relative;
-  left: 100px;
+  /*left: 100px; */
   top: 100px;
   margin-top: 25px;
 }
