--- a/client/src/stylesheets/FeedbackPage.css
+++ b/client/src/stylesheets/FeedbackPage.css
@@ -34,6 +34,7 @@ h3 {
   border-radius: 25px;
   background-color: white;
   padding: 30px;
+  
   position: relative;
   /*left: 100px; */
   top: 100px;
@@ -54,17 +55,29 @@ h3 {
 .rate,
 .rate-selected {
   background-color: #e7e7e7;
+  /**background-color: #03A9F4;**/
   border: none;
+  padding: 13px 26px;
   margin-right: 10px;
+  font-weight: bold;
+  border-radius: 2.5vw;
 }
-
 .rate-selected {
-  background-color: #03a9f4;
+  background-color: #03A9F4;
+  color: white;
 }
 
+:focus {
+  outline: none;
+}
 .submitButton {
   width: 10%;
-  height: 5%;
+  height: 7%;
+  color: white;
+  font-weight: bold;
+  background-color: #03A9F4;
+  border-color: transparent;
+  border-radius: 2vw;
   position: relative;
   /*left: 100px; */
   top: 100px;
