--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -3,14 +3,14 @@
 .container {
   background-color: #e6f4fc;
   margin: 0;
-  padding: 100px 10px;
+  padding: 100px 100px;
   width: 100vw;
   height: 100%;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 200px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .containerGrid {
