--- a/client/src/stylesheets/Roster.css
+++ b/client/src/stylesheets/Roster.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
+body {
+  background-color: #e6f4fc;
+}
+
 .container {
   background-color: #e6f4fc;
   margin: 0;
