added filter functionality

--- a/client/src/stylesheets/RosterCard.css
+++ b/client/src/stylesheets/RosterCard.css
@@ -67,8 +67,8 @@ h2 {
 }
 
 #semestersAttendedBubble {
-    background-color: #E4D3F5;
-  }
+  background-color: #e4d3f5;
+}
 
 #notesBubble {
   background-color: #dedede;
