added summary button

--- a/client/src/stylesheets/FeedbackPage.css
+++ b/client/src/stylesheets/FeedbackPage.css
@@ -43,6 +43,23 @@ h3 {
   margin-top: 25px;
 }
 
+.summaryButton{
+  color: white;
+  font-weight: bold;
+  background-color: #03A9F4;
+  border-color: transparent;
+  border-radius: 2vw;
+  display: flex;
+  position: relative;
+  /*left: 100px; */
+  top: 100px;
+  padding: 1.25% 1.25% 1.25% 1.25%;
+  margin-top: 25px;
+}
+.summaryButton:hover {
+  cursor:pointer;
+}
+
 .rateText {
   text-align: center;
   margin-bottom: 20px;
